--- a/index.html
+++ b/index.html
@@ -1,145 +1,280 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>💌 Valentine?</title>
-  <style>
-    :root { --bg1:#ffe6f1; --bg2:#fff6fb; --ink:#2b2b2b; }
-    * { box-sizing: border-box; }
-    body{
-      margin:0; min-height:100vh; display:grid; place-items:center;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
-      color:var(--ink);
-      background: radial-gradient(circle at top, var(--bg2), var(--bg1));
-      overflow:hidden;
-    }
-    .card{
-      width:min(560px,92vw);
-      padding:30px 22px;
-      border-radius:24px;
-      background: rgba(255,255,255,0.88);
-      box-shadow: 0 20px 60px rgba(0,0,0,0.12);
-      text-align:center;
-      backdrop-filter: blur(8px);
-      position:relative;
-    }
-    h1{ margin: 6px 0 10px; font-size: 30px; }
-    p{ margin: 0 0 18px; font-size: 16px; opacity: 0.92; }
-    .badge{
-      display:inline-block;
-      padding:6px 10px;
-      border-radius:999px;
-      background:#fff;
-      border:1px solid rgba(0,0,0,0.08);
-      font-size:13px;
-      margin-bottom:10px;
-    }
-    .buttons{ display:flex; gap:12px; justify-content:center; flex-wrap:wrap; align-items:center; }
-    button{
-      border:0;
-      padding:12px 18px;
-      border-radius:999px;
-      font-size:16px;
-      cursor:pointer;
-      transition: transform .12s ease, box-shadow .12s ease, opacity .12s ease;
-      user-select:none;
-      touch-action: manipulation;
-      font-weight: 600;
-    }
-    #yes{
-      background:#22c55e; /* green */
-      color:#fff;
-      box-shadow: 0 10px 20px rgba(34,197,94,0.30);
-      transform: scale(1);
-    }
-    #no{
-      background:#ef4444; /* red */
-      color:#fff;
-      box-shadow: 0 10px 20px rgba(239,68,68,0.25);
-      transform: scale(1);
-      position: relative;
-    }
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>💌 Valentine</title>
 
-    /* Hint starts hidden */
-    .hint{
-      margin-top:14px;
-      font-size:13px;
-      opacity:0.78;
-      display:none;
-    }
+<style>
+:root { --bg1:#ffe6f1; --bg2:#fff6fb; --ink:#2b2b2b; }
+* { box-sizing: border-box; }
 
-    /* floating hearts background */
-    .floating{ position:absolute; inset:-40px; pointer-events:none; opacity:0.35; }
-    .heart{ position:absolute; animation: float 7s linear infinite; opacity:0.9; }
-    @keyframes float{
-      from{ transform: translateY(110vh) translateX(0) rotate(0deg); }
-      to{ transform: translateY(-20vh) translateX(40px) rotate(360deg); }
-    }
+body{
+  margin:0;
+  min-height:100vh;
+  display:grid;
+  place-items:center;
+  font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+  color:var(--ink);
+  background: radial-gradient(circle at top, var(--bg2), var(--bg1));
+  overflow:hidden;
+}
 
-    /* popup message */
-    .overlay{
-      position: fixed; inset: 0;
-      display:none;
-      place-items:center;
-      background: rgba(255, 230, 241, 0.55);
-      backdrop-filter: blur(6px);
-      padding: 18px;
-      z-index: 9999;
-    }
-    .modal{
-      width: min(560px, 92vw);
-      background: rgba(255,255,255,0.92);
-      border-radius: 24px;
-      box-shadow: 0 20px 60px rgba(0,0,0,0.14);
-      padding: 22px;
-      text-align: center;
-    }
-    .modal h2{ margin: 6px 0 8px; font-size: 26px; }
-    .modal p{ margin: 0 0 14px; }
-    .modal .small{ font-size: 13px; opacity: 0.78; margin-top: 10px; }
-    .modal button{
-      background:#22c55e; color:white;
-      box-shadow: 0 10px 20px rgba(34,197,94,0.30);
-    }
-    .yes-image{
-      width: min(420px, 86vw);
-      border-radius: 18px;
-      margin: 10px auto 6px;
-      display:block;
-      box-shadow: 0 14px 40px rgba(0,0,0,0.12);
-    }
-  </style>
+.card{
+  width:min(560px,92vw);
+  padding:30px 22px;
+  border-radius:24px;
+  background: rgba(255,255,255,0.9);
+  box-shadow: 0 20px 60px rgba(0,0,0,0.12);
+  text-align:center;
+  backdrop-filter: blur(8px);
+  position:relative;
+}
+
+h1{ margin: 6px 0 10px; font-size: 30px; }
+p{ margin: 0 0 18px; font-size: 16px; }
+
+.badge{
+  display:inline-block;
+  padding:6px 10px;
+  border-radius:999px;
+  background:#fff;
+  border:1px solid rgba(0,0,0,0.08);
+  font-size:13px;
+  margin-bottom:10px;
+}
+
+.buttons{
+  display:flex;
+  gap:12px;
+  justify-content:center;
+  flex-wrap:wrap;
+  align-items:center;
+}
+
+button{
+  border:0;
+  padding:12px 18px;
+  border-radius:999px;
+  font-size:16px;
+  cursor:pointer;
+  transition: transform .15s ease;
+  font-weight:600;
+}
+
+#yes{
+  background:#22c55e;
+  color:#fff;
+  transform: scale(1);
+}
+
+#no{
+  background:#ef4444;
+  color:#fff;
+  transform: scale(1);
+}
+
+.hint{
+  margin-top:14px;
+  font-size:13px;
+  opacity:0.8;
+  display:none;
+}
+
+/* Floating background hearts */
+.floating{ position:absolute; inset:-40px; pointer-events:none; opacity:0.35; }
+.heart{ position:absolute; animation: float 7s linear infinite; }
+@keyframes float{
+  from{ transform: translateY(110vh); }
+  to{ transform: translateY(-20vh); }
+}
+
+/* Overlay */
+.overlay{
+  position: fixed;
+  inset: 0;
+  display:none;
+  place-items:center;
+  background: rgba(255, 230, 241, 0.55);
+  backdrop-filter: blur(6px);
+  z-index: 9999;
+}
+
+.modal{
+  width: min(560px, 92vw);
+  background: rgba(255,255,255,0.95);
+  border-radius: 24px;
+  padding: 22px;
+  text-align: center;
+}
+
+.modal h2{ margin: 6px 0 8px; }
+
+.yes-image{
+  width: min(420px, 86vw);
+  border-radius: 18px;
+  margin: 12px auto;
+  display:block;
+  box-shadow: 0 14px 40px rgba(0,0,0,0.15);
+}
+
+.love-btn{
+  background:#ff4d88;
+  color:white;
+  margin-top:10px;
+}
+
+/* Heart explosion */
+.particle-heart{
+  position: fixed;
+  z-index: 10000;
+  pointer-events: none;
+  font-size: 18px;
+  animation: heart-fly 900ms ease-out forwards;
+}
+
+@keyframes heart-fly{
+  0%   { transform: translate(0,0) scale(0.9); opacity: 1; }
+  100% { transform: translate(var(--dx), var(--dy)) scale(1.4); opacity: 0; }
+}
+
+</style>
 </head>
+
 <body>
-  <div class="floating" id="floating"></div>
 
-  <div class="card" id="card">
-    <div class="badge">💌 from mochi</div>
+<div class="floating" id="floating"></div>
 
-    <h1 id="title">Will you be my Valentine again this year?</h1>
-    <p id="subtitle">I promise more soprano delis, 21 degree air-con, and burrito cuddles!</p>
+<div class="card">
+  <div class="badge">💌 from mochi</div>
+  <h1>Will you be my Valentine again this year?</h1>
+  <p>I promise more soprano delis, 21 degree air-con, and burrito cuddles!</p>
 
-    <div class="buttons">
-      <button id="yes">Yes ❤️</button>
-      <button id="no">No</button>
-    </div>
-
-    <div class="hint" id="hint"></div>
+  <div class="buttons">
+    <button id="yes">Yes ❤️</button>
+    <button id="no">No</button>
   </div>
 
-  <!-- cute message modal -->
-  <div class="overlay" id="overlay">
-    <div class="modal">
-      <div class="badge">💘 accepted</div>
-      <h2>Yeayyyy! 😍😍</h2>
-      <p>I knew it! It's meeeeee! 🥰❤️❤️</p>
+  <div class="hint" id="hint"></div>
+</div>
 
-      <!-- Upload an image to your repo and name it "valentine.jpg" (or change src below) -->
-      <img class="yes-image" id="yesImage" src="valentine.jpg" alt="Mochi Valentine Image" />
+<div class="overlay" id="overlay">
+  <div class="modal">
+    <h2>Yeayyyy! 😍😍</h2>
+    <p>I knew it! It's meeeeee! 🥰❤️❤️</p>
 
-      <button id="close">Okayyy ❤️</button>
-      <div class="small">now mochi can do the old man screenshot and send to me!</div>
+    <!-- Upload image and name it valentine.jpg -->
+    <img src="valentine.jpg" class="yes-image" />
+
+    <button id="close" class="love-btn">Love you mochi!! ❤️💕</button>
+    <div style="margin-top:10px; font-size:13px; opacity:0.8;">
+      now mochi can do the old man screenshot and send to me!
+    </div>
+  </div>
+</div>
+
+<script>
+const yesBtn = document.getElementById('yes');
+const noBtn  = document.getElementById('no');
+const hint   = document.getElementById('hint');
+const overlay = document.getElementById('overlay');
+const closeBtn = document.getElementById('close');
+
+let state = 0;
+let yesScale = 1;
+let noScale = 1;
+
+function clamp(n, min, max){ return Math.max(min, Math.min(max, n)); }
+function setScales(){
+  yesBtn.style.transform = `scale(${yesScale})`;
+  noBtn.style.transform  = `scale(${noScale})`;
+}
+
+function moveNoRandomly(){
+  noBtn.style.position = 'fixed';
+  const pad = 10;
+  const maxX = window.innerWidth  - noBtn.offsetWidth  - pad;
+  const maxY = window.innerHeight - noBtn.offsetHeight - pad;
+  const x = Math.random() * maxX;
+  const y = Math.random() * maxY;
+  noBtn.style.left = x + "px";
+  noBtn.style.top  = y + "px";
+}
+
+function handleNo(){
+
+  if(state >= 3){
+    moveNoRandomly();
+    return;
+  }
+
+  yesScale = clamp(yesScale + 0.4, 1, 3);
+  noScale  = clamp(noScale - 0.3, 0.3, 1);
+
+  state++;
+
+  if(state === 1){
+    noBtn.textContent = "you sure?";
+    hint.style.display = "block";
+    hint.textContent = "choose wisely!";
+  }
+  else if(state === 2){
+    noBtn.textContent = "Pleaseeeeeee 🥺";
+    hint.textContent = "But we need two kitchen mochis!";
+  }
+  else if(state === 3){
+    yesScale = 3;
+    noScale = 0.3;
+    noBtn.textContent = "last chance";
+    hint.textContent = "okay it's running away now!";
+    moveNoRandomly();
+  }
+
+  setScales();
+}
+
+noBtn.addEventListener('click', handleNo);
+noBtn.addEventListener('touchstart', (e)=>{e.preventDefault();handleNo();},{passive:false});
+
+yesBtn.addEventListener('click', ()=>{
+  overlay.style.display = 'grid';
+});
+
+function heartBurstFrom(el){
+  const rect = el.getBoundingClientRect();
+  const x = rect.left + rect.width / 2;
+  const y = rect.top + rect.height / 2;
+  const hearts = ["💗","💖","💘","💞","💓","💝","❤️","💕"];
+
+  for (let i = 0; i < 25; i++){
+    const h = document.createElement("div");
+    h.className = "particle-heart";
+    h.textContent = hearts[Math.floor(Math.random()*hearts.length)];
+
+    const angle = Math.random() * Math.PI * 2;
+    const dist = 80 + Math.random() * 140;
+    const dx = Math.cos(angle) * dist;
+    const dy = Math.sin(angle) * dist;
+
+    h.style.left = x + "px";
+    h.style.top  = y + "px";
+    h.style.setProperty("--dx", dx + "px");
+    h.style.setProperty("--dy", dy + "px");
+
+    document.body.appendChild(h);
+    h.addEventListener("animationend", ()=> h.remove());
+  }
+}
+
+closeBtn.addEventListener('click', ()=>{
+  heartBurstFrom(closeBtn);
+});
+
+setScales();
+</script>
+
+</body>
+</html>
     </div>
   </div>
 
