--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ body{
   text-align:center;
   backdrop-filter: blur(8px);
   position:relative;
+  z-index: 1;
 }
 
 h1{ margin: 6px 0 10px; font-size: 30px; }
@@ -72,6 +73,7 @@ button{
   background:#ef4444;
   color:#fff;
   transform: scale(1);
+  z-index: 2; /* just in case */
 }
 
 .hint{
@@ -82,7 +84,7 @@ button{
 }
 
 /* Floating background hearts */
-.floating{ position:absolute; inset:-40px; pointer-events:none; opacity:0.35; }
+.floating{ position:absolute; inset:-40px; pointer-events:none; opacity:0.35; z-index:0; }
 .heart{ position:absolute; animation: float 7s linear infinite; }
 @keyframes float{
   from{ transform: translateY(110vh); }
@@ -137,9 +139,173 @@ button{
   0%   { transform: translate(0,0) scale(0.9); opacity: 1; }
   100% { transform: translate(var(--dx), var(--dy)) scale(1.4); opacity: 0; }
 }
-
 </style>
 </head>
+
+<body>
+
+<div class="floating" id="floating"></div>
+
+<div class="card">
+  <div class="badge">💌 from mochi</div>
+  <h1>Will you be my Valentine again this year?</h1>
+  <p>I promise more soprano delis, 21 degree air-con, and burrito cuddles!</p>
+
+  <div class="buttons">
+    <button id="yes">Yes ❤️</button>
+    <button id="no">No</button>
+  </div>
+
+  <div class="hint" id="hint"></div>
+</div>
+
+<div class="overlay" id="overlay">
+  <div class="modal">
+    <h2>Yeayyyy! 😍😍</h2>
+    <p>I knew it! It's meeeeee! 🥰❤️❤️</p>
+
+    <!-- Upload image and name it valentine.jpg (or change filename here) -->
+    <img src="valentine.jpg" class="yes-image" alt="valentine image">
+
+    <button id="close" class="love-btn">Love you mochi!! ❤️💕</button>
+    <div style="margin-top:10px; font-size:13px; opacity:0.8;">
+      now mochi can do the old man screenshot and send to me!
+    </div>
+  </div>
+</div>
+
+<script>
+/* Floating hearts background */
+const floating = document.getElementById('floating');
+const bgHearts = ["💗","💖","💘","💞","💓","💝"];
+for (let i = 0; i < 18; i++) {
+  const s = document.createElement('div');
+  s.className = 'heart';
+  s.textContent = bgHearts[Math.floor(Math.random()*bgHearts.length)];
+  s.style.left = Math.random()*100 + 'vw';
+  s.style.animationDelay = (-Math.random()*7) + 's';
+  s.style.animationDuration = (6 + Math.random()*6) + 's';
+  s.style.fontSize = (14 + Math.random()*18) + 'px';
+  floating.appendChild(s);
+}
+
+const yesBtn = document.getElementById('yes');
+const noBtn  = document.getElementById('no');
+const hint   = document.getElementById('hint');
+const overlay = document.getElementById('overlay');
+const closeBtn = document.getElementById('close');
+
+let state = 0;     // 0,1,2,3
+let yesScale = 1;
+let noScale = 1;
+
+function clamp(n, min, max){ return Math.max(min, Math.min(max, n)); }
+
+function setScales(){
+  yesBtn.style.transform = `scale(${yesScale})`;
+  noBtn.style.transform  = `scale(${noScale})`;
+}
+
+/* Robust random placement using getBoundingClientRect (accounts for transform scale) */
+function moveNoRandomly(){
+  noBtn.style.position = 'fixed';
+  noBtn.style.zIndex = '9998';
+
+  // wait a frame so layout/transform updates are reflected in rect
+  requestAnimationFrame(() => {
+    const pad = 12;
+    const rect = noBtn.getBoundingClientRect();
+    const btnW = rect.width;
+    const btnH = rect.height;
+
+    const maxX = Math.max(pad, window.innerWidth  - btnW - pad);
+    const maxY = Math.max(pad, window.innerHeight - btnH - pad);
+
+    const x = Math.floor(pad + Math.random() * (maxX - pad));
+    const y = Math.floor(pad + Math.random() * (maxY - pad));
+
+    noBtn.style.left = x + "px";
+    noBtn.style.top  = y + "px";
+  });
+}
+
+function handleNo(){
+  // last chance: keep teleporting forever
+  if (state >= 3) {
+    moveNoRandomly();
+    return;
+  }
+
+  // Bigger contrast per click
+  yesScale = clamp(yesScale + 0.45, 1, 3.0);
+  noScale  = clamp(noScale - 0.32, 0.28, 1);
+
+  state++;
+
+  if (state === 1){
+    noBtn.textContent = "you sure?";
+    hint.style.display = "block";
+    hint.textContent = "choose wisely!";
+  } else if (state === 2){
+    noBtn.textContent = "Pleaseeeeeee 🥺";
+    hint.textContent = "But we need two kitchen mochis!";
+  } else if (state === 3){
+    // lock final sizes
+    yesScale = 3.0;
+    noScale  = 0.28;
+    noBtn.textContent = "last chance";
+    hint.textContent = "okay it's running away now!";
+    setScales();
+    moveNoRandomly();
+    return;
+  }
+
+  setScales();
+}
+
+noBtn.addEventListener('click', handleNo);
+noBtn.addEventListener('touchstart', (e)=>{ e.preventDefault(); handleNo(); }, {passive:false});
+
+yesBtn.addEventListener('click', ()=>{
+  overlay.style.display = 'grid';
+});
+
+function heartBurstFrom(el){
+  const rect = el.getBoundingClientRect();
+  const x = rect.left + rect.width / 2;
+  const y = rect.top + rect.height / 2;
+  const hearts = ["💗","💖","💘","💞","💓","💝","❤️","💕"];
+
+  for (let i = 0; i < 26; i++){
+    const h = document.createElement("div");
+    h.className = "particle-heart";
+    h.textContent = hearts[Math.floor(Math.random()*hearts.length)];
+
+    const angle = Math.random() * Math.PI * 2;
+    const dist = 80 + Math.random() * 150;
+    const dx = Math.cos(angle) * dist;
+    const dy = Math.sin(angle) * dist;
+
+    h.style.left = x + "px";
+    h.style.top  = y + "px";
+    h.style.setProperty("--dx", dx + "px");
+    h.style.setProperty("--dy", dy + "px");
+    h.style.fontSize = (14 + Math.random()*18) + "px";
+
+    document.body.appendChild(h);
+    h.addEventListener("animationend", ()=> h.remove());
+  }
+}
+
+closeBtn.addEventListener('click', ()=>{
+  heartBurstFrom(closeBtn);
+});
+
+setScales();
+</script>
+
+</body>
+</html>
 
 <body>
 
